--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -9,8 +9,8 @@ body {
 .grid-container {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 2fr 4fr 1fr;
-    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 3fr 1fr;
+    grid-template-rows: auto auto 1fr auto;
     grid-template-areas: 
     "header header header header"
     ". lsidebar main  ."
@@ -23,7 +23,7 @@ body {
 }
 
 .main-content, .right-sidebar {
-    background-color: rgb(217, 238, 247);;
+    background-color: rgb(217, 238, 247);
 }
 
 .header {
@@ -35,13 +35,20 @@ body {
 
 .main-content {
     grid-area: main;
+}
 
+.main-content h3, .main-content p {
+    margin: 30px 10px;
 }
 
 .left-sidebar {
     background-color: rgb(202, 211, 219);
     grid-area: lsidebar;
 
+}
+
+.left-sidebar *, .right-sidebar *, .main-content * {
+    margin: 10px;
 }
 
 .right-sidebar {
@@ -73,3 +80,14 @@ body {
     }
   
   }
+
+#all-pokemon {
+    background-color: rgb(248, 246, 246);
+    text-align: center;
+    width: 90%;
+    padding: 5px;
+}
+
+#all-pokemon tr:nth-child(even) {
+    background-color: rgb(177, 201, 211)
+}
