add css design background color

--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0px;
     color: rgb(23, 1, 29);
     font-family: 'Open Sans', sans-serif;
+    background-color: rgb(210, 182, 216);
 }
 
 .grid-container {
