--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -33,14 +33,21 @@ body {
     text-align: left;
     padding: auto;
     grid-area: header;
+    
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+
+    position: relative;
+    
 }
 
+
 .header h1 {
-    margin: 30px 20px;
+    margin: 30px 20px 30px 10px;
+    order: 1;
+
 }
 
 .main-content {
@@ -174,14 +181,70 @@ h1, h2, h3, h4 {
     border-radius: 10px;
 }
 
-#egg {
+
+#flippokemon {
     width: 80px;
     height: 80px;
-    margin: 10px 20px 0 10px;
+    order: 0;
+    margin-left: 10px;
+    transition: transform 150ms ease-in-out;
+    animation: rotation 1s 1 linear;
 }
-#bullsaur {
+
+#movepokemon {
     width: 60px;
     height: 60px;
-    margin: 30px 10px 0 30px;
+    order: 2;
+    animation: moving 400ms ease forwards;
+   
+}
+
+#flippokemon:hover {
+    transform: scaleX(-1);
+}
+
+@keyframes rotation {
+    from {
+        opacity: 0; transform: scale(0); 
+    }
+    to {
+      opacity: 1; transform: scale(1); 
+    }
+}
+
+@keyframes moving {
+    from{
+        top: 20px;
+        transform: rotate(0deg);
+    }
+    10% {
+        top: 15px;
+        transform: rotate(60deg);
+        filter: contrast(150%) drop-shadow(15px 15px 5px rgb(252, 67, 21));
+    }
+    20% {
+        top: 20px;
+        transform: rotate(120deg);
+        filter: contrast(150%) drop-shadow(10px 10px 5px rgb(252, 67, 21));
+    }
+    40% {
+        top: 25px;
+        transform: rotate(180deg);
+        filter: contrast(150%) drop-shadow(5px 5px 5px rgb(252, 67, 21));
+    }
+    60% {
+        top: 15px;
+        transform: rotate(240deg);
+    }
+    80%{
+        top: 20px;
+        transform: rotate(300deg);
+
+    }
+    to {
+        top: 25px;
+        transform: rotate(360deg);
+    }
+    
 
 }
