--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Borel&family=Handjet:wght@300;500;700;800&family=Open+Sans:ital,wght@1,500&family=Poppins:ital,wght@1,200&family=Roboto:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Borel&family=Handjet:wght@300;500;700;800&family=Open+Sans:ital,wght@1,500&family=Poppins:ital,wght@1,200&family=Roboto:wght@500&display=swap');
 body {
     margin: 0px;
     color: rgb(23, 1, 29);
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: rgb(210, 182, 216);
 }
 
@@ -38,8 +37,6 @@ body {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-
-    position: relative;
     
 }
 
@@ -188,7 +185,7 @@ h1, h2, h3, h4 {
     order: 0;
     margin-left: 10px;
     transition: transform 500ms ease-in-out;
-    animation: rotation 500mss 1 linear;
+    animation: rotation 500ms 1 linear;
 }
 
 #movepokemon {
