--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0px;
     color: rgb(23, 1, 29);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif, serif;
     background-color: rgb(210, 182, 216);
 }
 
