--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Borel&family=Handjet:wght@300;500;700;800&family=Open+Sans:ital,wght@1,500&family=Poppins:ital,wght@1,200&family=Roboto:wght@500&display=swap');
+
 body {
     margin: 0px;
     color: rgb(23, 1, 29);
@@ -173,6 +174,7 @@ h1, h2, h3, h4 {
 
 .pokeSelected {
     font-weight: bolder;
+    font-size: 1.4em;
     border: 5px solid rgb(59, 7, 59);
     box-shadow:  6px 6px 6px rgba(170, 165, 165, 0.1);
     border-radius: 10px;
@@ -185,19 +187,25 @@ h1, h2, h3, h4 {
     order: 0;
     margin-left: 10px;
     transition: transform 500ms ease-in-out;
-    animation: rotation 500ms 1 linear;
+   
 }
 
 #movepokemon {
     width: 60px;
     height: 60px;
     order: 2;
-    animation: moving 400ms ease forwards;
-   
+}
+
+#flippokemon, #movepokemon {
+    animation: rotation 500ms 1 linear;
 }
 
 #flippokemon:hover {
-    transform: scaleX(-1);
+    transform: scale(1.2) scaleX(-1);
+}
+
+#movepokemon:hover {
+    animation: moving 400ms ease forwards;
 }
 
 
@@ -215,16 +223,16 @@ h1, h2, h3, h4 {
         transform: rotate(0deg);
     }
     20% {
-        transform: rotate(60deg);
+        transform: rotate(90deg);
         filter: contrast(150%) drop-shadow(15px 15px 5px rgb(252, 67, 21));
     }
     40% {
-        transform: rotate(120deg);
-        filter: contrast(150%) drop-shadow(10px 10px 5px rgb(252, 67, 21));
+        transform: rotate(180deg);
+        filter: contrast(150%) drop-shadow(20px 20px 10px rgb(252, 67, 21));
     }
     80% {
-        transform: rotate(180deg);
-        filter: contrast(150%) drop-shadow(5px 5px 5px rgb(252, 67, 21));
+        transform: rotate(240deg);
+        filter: contrast(150%) drop-shadow(15px 15px 15px rgb(252, 67, 21));
     }
     to {
         transform: rotate(360deg);
