--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0px;
     color: rgb(23, 1, 29);
     font-family: 'Roboto', sans-serif, serif;
-    background-color: rgb(210, 182, 216);
+    background-color: rgb(217, 208, 219);
 }
 
 .grid-container {
@@ -50,6 +50,8 @@ body {
 
 .main-content {
     grid-area: main;
+    border-radius: 15px 15px 0 0;
+    margin: 5px 5px 0 5px;
 }
 
 h1, h2, h3, h4 {
@@ -66,6 +68,8 @@ h1, h2, h3, h4 {
 
 .left-sidebar, .favorite {
     background-color: rgb(241, 187, 209);
+    border-radius: 15px;
+    margin: 5px;
 
 }
 
@@ -80,8 +84,11 @@ h1, h2, h3, h4 {
 
 .right-sidebar {
     grid-area: rsidebar;
+    border-radius: 0 0 15px 15px;
+    margin: 0 5px 5px 5px;
 
 }
+
 
 .favorite {
     grid-area: favorite;
@@ -261,6 +268,7 @@ h1, h2, h3, h4 {
     justify-content: space-between;
     align-items: flex-start;
 }
+
 #main-h2 * {
     margin-top: 0;
     padding-top: 0;
@@ -269,21 +277,25 @@ h1, h2, h3, h4 {
 #btn-like {
     float: right;
     text-align: right;
-    font-size: 18;
+    font-size: 1.2em;
     font-weight: bolder;
-    width: 140px;
+    width: 110px;
     height: 30px;
     border-radius: 10px;
-    color: rgb(85, 49, 3);
+    color: rgb(36, 2, 33);
     border: 3px 3px 3px rgb(171, 190, 62);
     background-color: rgb(235, 233, 124);
     position: relative;
+    z-index: 1;
 }
 
+
 #img-like {
+    float: left;
     position: absolute;
     bottom: -18px;
     left: 0;
     width: 20px;
     height: 20px;
+    z-index: 0;
 }
