--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -93,12 +93,14 @@ h1, h2, h3, h4 {
 .favorite {
     grid-area: favorite;
 
+}
+
+#favorite-nav{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .footer{
@@ -120,8 +122,8 @@ h1, h2, h3, h4 {
         "header"
         "main"
         "rsidebar"
-        "lsidebar"
         "favorite"
+        "lsidebar"
         "footer";
     }
   
@@ -297,3 +299,12 @@ h1, h2, h3, h4 {
     width: 20px;
     height: 20px;
 }
+
+.favorite-img {
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    margin: 3px;
+    
+}
+
