--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -278,19 +278,22 @@ h1, h2, h3, h4 {
 
 #btn-like {
     float: right;
-    text-align: right;
-    font-size: 1.2em;
-    font-weight: bolder;
-    width: 110px;
+    text-align: center;
+    font-size: 18;
+    font-weight: 2em;
+    width: 150px;
     height: 30px;
     border-radius: 10px;
-    color: rgb(36, 2, 33);
+    color: red;
     border: 3px 3px 3px rgb(171, 190, 62);
     background-color: rgb(235, 233, 124);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    /*
     position: relative;
+    */
 }
 
-
+/*
 #img-like {
     float: left;
     position: absolute;
@@ -299,6 +302,7 @@ h1, h2, h3, h4 {
     width: 20px;
     height: 20px;
 }
+*/
 
 .favorite-img {
     width: 50px;
