--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -188,12 +188,12 @@ h1, h2, h3, h4 {
 }
 
 #pokeimg {
-    transition: transform 2s ease-in;
+    transition: transform 2s ease-in, filter 2s;
 }
 
 #pokeimg:hover {
-    transform: rotate(360deg) scale(1.5);
-    filter: contrast(150%) drop-shadow(16px 16px 10px rgb(243, 25, 25));
+    transform: translate(0%, -10%) scale(1.3);
+    filter: contrast(150%) drop-shadow(15px 15px 10px rgb(243, 25, 25));
 }
 
 .pokeSelected {
