--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -188,7 +188,7 @@ h1, h2, h3, h4 {
 }
 
 #pokeimg {
-    transition: transform 2s ease-in, filter 2s;
+    transition: transform 2s ease-in, filter 2s ease-out;
 }
 
 #pokeimg:hover {
