--- a/web-assignment-pokemon/style.css
+++ b/web-assignment-pokemon/style.css
@@ -292,13 +292,32 @@ h1, h2, h3, h4 {
     width: fit-content;
 }
 
+/*
+#test {
+    filter: grayscale(1);
+}
+
+#btn-favorite {
+    text-align: center;
+    width: 50px;
+    height: 50px;
+}
+
+#btn-favorite img {
+    width: 30px;
+    height: 30px;
+    padding: auto;
+    margin: auto;
+}
+*/
+
 #remove-all:disabled, #show-detail:disabled, #remove:disabled {
     background-color: darkgray;
 }
 
 .favorite-img {
-    width: 60px;
-    height: 60px;
+    width: 55px;
+    height: 55px;
     padding: 0;
     margin: 3px;
     
